@@ -44,6 +44,7 @@
     <string name="keyfile_key">keyfile</string>
     <string name="maskpass_key">maskpass</string>
     <string name="omitbackup_key">omitbackup</string>    
+    <string name="recentfile_key">recentfile</string>    
     <string name="list_size_key">list_size</string>
     <string name="show_beta_warning">show_beta_warning</string>
     <string name="sort_key">sort_key</string>
@@ -52,6 +53,7 @@
     <bool name="keyfile_default">true</bool>
     <bool name="sort_default">true</bool>
     <bool name="omitbackup_default">true</bool>
+    <bool name="recentfile_default">true</bool>
     
     <string name="clipboard_timeout_default">300000</string>
     <string-array name="clipboard_timeout_values">
